--- a/Multas-tB/Multas-tB/Web.config
+++ b/Multas-tB/Multas-tB/Web.config
@@ -13,15 +13,12 @@
       <add key="webpages:Enabled" value="false" />
       <add key="ClientValidationEnabled" value="true" />
       <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-   </appSettings>
+   <add key="owin:AppStartup" value="IdentitySample.Startup,Multas_tB" /></appSettings>
 
    <!-- criar uma referência para o motor de Base de Dados -->
-   <connectionStrings >
-      <add name="MultasDBConnectionString"
-           connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MultasDB.mdf;Integrated Security=True;"
-           providerName="System.Data.SqlClient"
-      />
-   </connectionStrings>
+   <connectionStrings>
+      <add name="MultasDBConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MultasDB.mdf;Integrated Security=True;" providerName="System.Data.SqlClient" />
+   <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=Multas_tB-2-1-alpha1;Integrated Security=SSPI" providerName="System.Data.SqlClient" /></connectionStrings>
 
    <system.web>
       <compilation debug="true" targetFramework="4.6.1" />
@@ -40,6 +37,10 @@
          <dependentAssembly>
             <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
             <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+         </dependentAssembly>
+         <dependentAssembly>
+            <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+            <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
          </dependentAssembly>
       </assemblyBinding>
    </runtime>
