configuração das ferramentas de autenticação: - eliminar a referência ao namespace 'IdentitySample' - migrar a bd 'MultasDB' para a bd de autenticação

--- a/Multas-tB/Multas-tB/Web.config
+++ b/Multas-tB/Multas-tB/Web.config
@@ -13,12 +13,21 @@
       <add key="webpages:Enabled" value="false" />
       <add key="ClientValidationEnabled" value="true" />
       <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-   <add key="owin:AppStartup" value="IdentitySample.Startup,Multas_tB" /></appSettings>
+
+      <!-- retirar na instrução seguinte
+           <add key="owin:AppStartup" value="Multas_tB.Startup,Multas_tB" />
+           o texto ',Multas_tB' -->
+      <add key="owin:AppStartup" value="Multas_tB.Startup" />
+  
+  </appSettings>
 
    <!-- criar uma referência para o motor de Base de Dados -->
    <connectionStrings>
       <add name="MultasDBConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MultasDB.mdf;Integrated Security=True;" providerName="System.Data.SqlClient" />
-   <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=Multas_tB-2-1-alpha1;Integrated Security=SSPI" providerName="System.Data.SqlClient" /></connectionStrings>
+      <!-- vamos usar a mesma base de dados para os dados do 'negócio'
+           e para os dados da autenticação
+           <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=Multas_tB-2-1-alpha1;Integrated Security=SSPI" providerName="System.Data.SqlClient" /> -->
+   </connectionStrings>
 
    <system.web>
       <compilation debug="true" targetFramework="4.6.1" />
